--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:orientation="vertical"
-    tools:context=".SplashActivity" >
+    tools:context=".SplashActivity"
+    android:padding="10dp">
 
     <Space
         android:layout_width="match_parent"
