--- a/app/src/main/res/drawable/edittext_design.xml
+++ b/app/src/main/res/drawable/edittext_design.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
             <corners android:radius="15dp"/>
-            <stroke android:color="@color/black" android:width="1dp"/>
+            <stroke android:color="@color/teal_700" android:width="1dp"/>
         </shape>
     </item>
 
