--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
         android:gravity="center"
         android:hint="הקלד טקסט כאן"
         android:inputType="textEmailAddress"
-        android:drawableEnd="@drawable/email_icon"
+        android:drawableEnd="@drawable/custom_email_icon"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:background="@drawable/edittext_design"
@@ -85,7 +85,7 @@
         android:gravity="center"
         android:hint="הקלד טקסט כאן"
         android:inputType="textPassword"
-        android:drawableEnd="@drawable/password_icon"
+        android:drawableEnd="@drawable/custom_password_icon"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:background="@drawable/edittext_design"
