--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -55,7 +55,7 @@
         android:gravity="center"
         android:hint="הקלד טקסט כאן"
         android:inputType="textEmailAddress"
-        android:drawableEnd="@drawable/email_icon"
+        android:drawableEnd="@drawable/custom_email_icon"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:background="@drawable/edittext_design"
@@ -90,7 +90,7 @@
         android:gravity="center"
         android:hint="הקלד טקסט כאן"
         android:inputType="textPassword"
-        android:drawableEnd="@drawable/password_icon"
+        android:drawableEnd="@drawable/custom_password_icon"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:background="@drawable/edittext_design"
