--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -417,9 +417,24 @@
         android:textColor="@color/black"
         android:textSize="14sp" />
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="20" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="10"
+        android:fontFamily="@font/calibri"
+        android:gravity="center"
+        android:text="*האפליקציה מנוסחת בלשון זכר ומכוונת לגברים ונשים כאחד*"
+        android:textColor="@color/gray"
+        android:textSize="12sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:orientation="vertical">
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
