--- a/app/src/main/res/layout/custom_listview_layout_tasks.xml
+++ b/app/src/main/res/layout/custom_listview_layout_tasks.xml
@@ -173,7 +173,7 @@
                             android:fontFamily="@font/calibri"
                             android:gravity="center"
                             android:singleLine="true"
-                            android:text="הערות"
+                            android:text="תיאור"
                             android:textColor="@color/black"
                             android:textSize="10sp" />
 
