--- a/app/src/main/res/layout/bottom_sheet_layout_task.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout_task.xml
@@ -49,6 +49,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv_task_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/calibri"
@@ -120,6 +121,7 @@
                 android:layout_height="30dp" />
 
             <TextView
+                android:id="@+id/tv_task_dateandtime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/calibri"
